<resources>
    <string name="app_name">HabitStacks</string>

    <string name="habit_select_text">select habit to work on</string>
    <string name="habit_add_description">write the habit or routine you would like to change</string>
    <string name="habit_add_duration">how often do you want to work on this habit ?</string>
    <string name="habit_add_rating">is this a positive, negative or neutral habit ?</string>

    <string name="track_text">TRACK</string>
    <string name="back_text">BACK</string>
    <string name="next_text">NEXT</string>
    <string name="submit_text">SUBMIT</string>
    <string name="new_text">NEW</string>
    <string name="focus_text">FOCUS</string>
    <string name="goal_text">GOAL</string>

    <string name="counter_format">%d times</string>
    <string name="daily_button_text"> daily</string>
    <string name="weekly_button_text"> weekly</string>
    <string name="monthly_button_text"> monthly</string>
    <string name="low_priority"> i want more of this</string>
    <string name="med_priority"> i want to maintain</string>
    <string name="high_priority"> i want less of this</string>
    <string name="location_text">Location</string>
    <string name="emotion_text">Emotion</string>
    <string name="action_text">Action</string>
    <string name="track_location_description">where are you right now ?</string>
    <string name="track_emotion_description">how are you feeling right now ?</string>
    <string name="track_action_description">what action did you do before and/or will do after ?</string>
    <string name="settings_text">Settings</string>
    <string name="delete_text">DELETE</string>
    <string name="cancel_text">CANCEL</string>
    <string name="delete_confirmation_text">do you want to delete this entry ?</string>
    <string name="habit_delete_confirm">do you want to delete this habit ?</string>
    <string name="tracker_deletion_warning">this will delete all associated activity for this habit</string>
    <string name="no_habits_display">No available habits to display</string>
    <string name="no_tracker_prompt">No entries to display.\n \n Habit tracking lets you monitor time, location, emotional state and possible cues.</string>
</resources>
