<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="newHabitViewModel"
            type="com.example.habitstacks.viewmodel.NewEditHabitViewModel" />
    </data>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_duration"
        style="@style/CardViewStyle"
        android:enabled="@{newHabitViewModel.cardViewRatingVisible}"
        app:layout_constraintBottom_toTopOf="@+id/habit_back_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.142">

        <TextView
            android:id="@+id/habit_add_duration"
            style="@style/TextStyle"
            android:textSize="28sp"
            android:layout_marginTop="30dp"
            android:text="@string/habit_add_duration" />

        <RadioGroup
            android:id="@+id/duration_radio_group"
            style="@style/RadioButtonStyle"
            android:layout_marginStart="120dp"
            android:layout_marginTop="120dp"
            android:layout_marginEnd="120dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/daily_button"
                style="@style/RadioButtonStyle"
                android:text="@string/daily_button_text" />

            <RadioButton
                android:id="@+id/weekly_button"
                style="@style/RadioButtonStyle"
                android:text="@string/weekly_button_text"/>

            <RadioButton
                android:id="@+id/monthly_button"
                style="@style/RadioButtonStyle"
                android:text="@string/monthly_button_text" />

        </RadioGroup>



    </androidx.cardview.widget.CardView>

</layout>