<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_habit_deletion"
        style="@style/CardViewStyle">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/habit_cancel_delete"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginBottom="32dp"
                android:text="@string/cancel_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tracker_deletion_warning"
                style="@style/TextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/tracker_deletion_warning"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/habit_deletion_confirmation"
                tools:textStyle="italic" />

            <TextView
                android:id="@+id/habit_deletion_confirmation"
                style="@style/TextStyle"
                android:layout_width="363dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/habit_delete_confirm"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/habit_delete_button"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/delete_text"
                app:layout_constraintBottom_toTopOf="@+id/habit_cancel_delete"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tracker_deletion_warning" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


</layout>