<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="newHabitViewModel"
            type="com.example.habitstacks.viewmodel.NewHabitViewModel" />
    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_priority"
        style="@style/AddCardViewStyle"
        android:enabled="@{newHabitViewModel.cardViewPriorityVisible}"
        app:layout_constraintBottom_toTopOf="@+id/back_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.142">

        <TextView
            android:id="@+id/habit_add_priority"
            style="@style/AddHabitTextStyle"
            android:text="@string/habit_add_priority"
            android:layout_marginTop="30dp"/>

        <RadioGroup
            android:id="@+id/priority_radio_group"
            style="@style/RadioButtonStyle"
            android:layout_marginStart="88dp"
            android:layout_marginEnd="68dp"
            android:layout_marginTop="160dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/low_priority_button"
                style="@style/RadioButtonStyle"
                android:text="@string/low_priority"/>

            <RadioButton
                android:id="@+id/med_priority_button"
                style="@style/RadioButtonStyle"
                android:text="@string/med_priority"/>

            <RadioButton
                android:id="@+id/high_priority_button"
                style="@style/RadioButtonStyle"
                android:text="@string/high_priority"/>

        </RadioGroup>

    </androidx.cardview.widget.CardView>


</layout>