<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="habitTracker"
            type="com.example.habitstacks.model.HabitTrackerEntry" />

        <variable
            name="trackerOverviewViewModel"
            type="com.example.habitstacks.viewmodel.TrackerOverviewViewModel" />
    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_track_deletion"
        style="@style/CardViewStyle">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/delete_confirmation"
                style="@style/TextStyle"
                android:text="@string/delete_confirmation_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="33dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/delete_yes_confirm"/>

            <Button
                android:id="@+id/delete_yes_confirm"
                style="@style/ButtonStyle"
                android:layout_marginBottom="128dp"
                android:text="@string/delete_text"
                android:background="@color/colorPrimaryDark"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/delete_no_confirm"
                style="@style/ButtonStyle"
                android:layout_marginBottom="40dp"
                android:text="@string/cancel_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>