<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="habitTracker"
            type="com.example.habitstacks.model.HabitTrackerEntry" />
    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/tracker_overview_cardview"
        style="@style/CardViewStyle"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/current_date_time"
                style="@style/TextStyle"
                android:textSize="28sp"
                android:layout_width="260dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                app:trackerEntryTime="@{habitTracker}"
                tools:text="Monday, July 13, 12:43PM"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tracker_overview_scrollview" />


            <Button
                android:id="@+id/tracker_edit_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/ic_baseline_edit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.304"
                app:layout_constraintLeft_toRightOf="@id/current_date_time"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tracker_delete_button"/>

            <Button
                android:id="@+id/tracker_delete_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/ic_baseline_delete"
                app:layout_constraintBottom_toTopOf="@id/tracker_overview_scrollview"
                app:layout_constraintHorizontal_bias="0.549"
                app:layout_constraintLeft_toRightOf="@id/current_date_time"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tracker_edit_button"
                app:layout_constraintVertical_bias="0.0" />

            <ScrollView
                android:id="@+id/tracker_overview_scrollview"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/current_date_time"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/location_placeholder"
                        style="@style/TextStyle"
                        android:padding="8dp"
                        android:text="@string/location_text"
                        android:textAlignment="textStart"
                        android:textColor="@color/design_default_color_primary_dark"
                        app:layout_constraintBottom_toTopOf="@id/location_input_display" />

                    <TextView
                        android:id="@+id/location_input_display"
                        style="@style/TextStyle"
                        android:padding="8dp"
                        android:textSize="28sp"
                        android:textAlignment="textStart"
                        app:trackerLocationText="@{habitTracker}"
                        tools:text="Grandmas house" />

                    <TextView
                        android:id="@+id/emotion_placeholder"
                        style="@style/TextStyle"
                        android:padding="8dp"
                        android:text="@string/emotion_text"
                        android:textAlignment="textStart"
                        android:textColor="@color/design_default_color_primary_dark" />

                    <TextView
                        android:id="@+id/emotion_input_display"
                        style="@style/TextStyle"
                        android:padding="8dp"
                        android:textSize="28sp"
                        android:textAlignment="textStart"
                        app:trackerEmotionText="@{habitTracker}"
                        tools:text="Happy" />

                    <TextView
                        android:id="@+id/action_placeholder"
                        style="@style/TextStyle"
                        android:padding="8dp"
                        android:text="@string/action_text"
                        android:textAlignment="textStart"
                        android:textColor="@color/design_default_color_primary_dark" />

                    <TextView
                        android:id="@+id/action_input_display"
                        style="@style/TextStyle"
                        android:layout_marginBottom="20dp"
                        android:padding="8dp"
                        android:textSize="28sp"
                        android:textAlignment="textStart"
                        app:trackerActionText="@{habitTracker}"
                        tools:text="Cleaning" />


                </LinearLayout>

            </ScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</layout>